resources/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actualbudget
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: actualbudget
  template:
    metadata:
      labels:
        app: actualbudget
    spec:
      containers:
        - name: actualbudget
          image: "ghcr.io/actualbudget/actual-server:24.8.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5006
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: actualbudget
