resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
  namespace: actualbudget
spec:
  type: ClusterIP
  ports:
  - port: 5006
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: actualbudget
